--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Fixed Deposit</title>
   </head>
   <body>
@@ -13,6 +13,6 @@
       <h1>Not Rendered</h1>
     </div>
 
-    <script type="module" src="./src/App.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
